# ruyi-mirror-checker

./: .gitignore  .gitmodules  README.md  pyproject.toml  status.json
.github/workflows/: check.yml
checker/: __main__.py  api.py  app.py  checker.py  config.py  generate.py
